--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Ifugao (Philippine people) -- Religion'
 - !lcsh 'Creation'
 - !lcsh 'Mythology, Philippine'
+- GITenberg
 title: Origin Myths among the Mountain Peoples of the Philippines
 url: http://www.gutenberg.org/ebooks/46024
